Fix routing on GitHub Pages deployment

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "author": "Kasper Kouhia",
   "private": true,
   "type": "module",
+  "homepage": "https://kasperkouhia.github.io/pancake-order-app",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
